--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run validate && rm -rf dist && cross-env NODE_ENV=production webpack --color --progress && cp README.md dist && cd dist && zip -r ../PluginZip.zip ./*"
   },
   "dependencies": {
-    "@remnote/plugin-sdk": "^0.0.30",
+    "@remnote/plugin-sdk": "^0.0.46",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-spring": "^9.7.2"
@@ -32,6 +32,7 @@
     "postcss-import": "^14.1.0",
     "postcss-loader": "^7.0.0",
     "react-refresh": "^0.14.0",
+    "rimraf": "^5.0.7",
     "tailwindcss": "^3.1.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
